Minor content fixes and GitHub Pages Deployment

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Android XML Theme Generator</h1>
-    <h3 id="headerLink">Release version 0.1<br>by <a href="https://github.com/imflawlezz">imflawlezz</a>.</h3>
+    <h3 id="headerLink">Pre-release version 0.1.1<br>by <a href="https://github.com/imflawlezz">imflawlezz</a>.</h3>
     
     <form id="themeForm">
         <label for="appName">App Name:</label>
